<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="add">Add</string>
    <string name="add_policy">Add Policy</string>
    <string name="add_record">Add Record</string>
    <string name="algorithm">Algorithm</string>
    <string name="alias_base_record_header">ALIAS</string>
    <string name="alias_to_same_record">Alias to the same record</string>
    <string name="allow_delete" tools:ignore="MissingTranslation">Allow delete</string>
    <string name="any_changes_will_be_lost">Any changes to the record will be lost.</string>
    <string name="app_desc">Access PasswordSafe databases on Android</string>
    <string name="app_name">PasswdSafe</string>
    <string name="at_least">At least</string>
    <string name="authentication_code">Authentication Code</string>
    <string name="authentication_code_header">AUTHENTICATION CODE</string>
    <string name="authentication_num_digits_invalid" tools:ignore="MissingTranslation">Number of digits must be between 1 and 8</string>
    <string name="authentication_key">Authentication Key</string>
    <string name="authentication_key_invalid">The Base32 authentication key is invalid. Allowed characters are a–z, A–Z, 2–7, space, and dash.</string>
    <string name="authentication_time_start_invalid" tools:ignore="MissingTranslation">Time start must be a valid date in seconds</string>
    <string name="authentication_time_step_invalid" tools:ignore="MissingTranslation">Time step must be greater than zero</string>
    <string name="backup_creation_failed">Backup creation failed</string>
    <string name="backup_file">Backup file</string>
    <string name="backup_file_help">
        To restore a backup file, select and open it.  Then, select the restore
        icon to replace the original file.  The restore may not be possible if
        the app no longer has permission to write to the original file.  An
        opened backup file may be shared to export it from the device.
        \n
        \nBackup files are stored in a private directory.  The files will be
        deleted if the app is uninstalled or its data is cleared.
    </string>
    <string name="backup_for_file_on">Backup for %1$s on %2$s</string>
    <string name="basic">Basic</string>
    <string name="canceled">Canceled</string>
    <string name="cannot_create_file">Cannot create file: %1$s</string>
    <string name="case_sensitive">Case sensitive</string>
    <string name="case_sensitive_sorting">Case-sensitive sorting</string>
    <string name="change_password">Change Password</string>
    <string name="choose">Choose</string>
    <string name="choose_group">Choose Group</string>
    <string name="choose_record">Choose Record</string>
    <string name="choose_type">Choose Type</string>
    <string name="clear">Clear</string>
    <string name="clear_all_saved_passwords">Clear all saved passwords</string>
    <string name="clear_clipboard_on_close">Clear clipboard on close</string>
    <string name="clear_password_notifications">Clear password notifications</string>
    <string name="clear_recent">Clear Recent</string>
    <string name="close_file_screen_off">Close file on screen off</string>
    <string name="confirm">Confirm</string>
    <string name="cannot_delete_record">Cannot delete record - %1$s</string>
    <string name="content_file">Content File</string>
    <string name="copy_authentication_code">Copy Authentication Code</string>
    <string name="copy_email">Copy Email</string>
    <string name="copy_notes">Copy Notes</string>
    <string name="copy_password">Copy Password</string>
    <string name="copy_password_warning">
        Warning: All apps can read the clipboard contents, and the clipboard
        cannot be reliably cleared.  The PasswdSafe alternate keyboard is a
        more secure method for entering passwords into other apps.  Click Enable
        to open the keyboard settings.
    </string>
    <string name="copy_url">Copy URL</string>
    <string name="copy_user">Copy User Name</string>
    <string name="created">Created</string>
    <string name="current">Current</string>
    <string name="custom_symbols">Custom Symbols</string>
    <string name="custom_symbol_not_alphanum">Custom symbols must not be alphanumeric or whitespace</string>
    <string name="database_policy">Database Policy - %s</string>
    <string name="database_version">Database version</string>
    <string name="days">Days</string>
    <string name="default_file_to_open">Default file to open</string>
    <string name="default_policy">Default Policy</string>
    <string name="default_symbols">Default symbols</string>
    <string name="default_symbols_empty_pref">Use an empty preference for default symbols: %1$s</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_all_backups_p">Delete all backups?</string>
    <string name="delete_backup_p">Delete backup?</string>
    <string name="delete_file">Delete File</string>
    <string name="delete_file_msg">Delete file \"%1$s\"?</string>
    <string name="delete_policy">Delete Policy</string>
    <string name="delete_policy_msg">Delete policy \"%1$s\"?</string>
    <string name="delete_record_msg">Delete record \"%1$s\"?</string>
    <string name="digits">Digits</string>
    <string name="directory_for_files">Directory for files</string>
    <string name="discard">Discard</string>
    <string name="discard_unsaged_changes_p">Discard unsaved changes?</string>
    <string name="display">Display</string>
    <string name="done">Done</string>
    <string name="duplicate_entry">Duplicate entry</string>
    <string name="duplicate_name">Duplicate name</string>
    <string name="edit_item">Edit %s</string>
    <string name="edit_authentication_code" tools:ignore="MissingTranslation">Edit Authentication Code</string>
    <string name="edit_policy">Edit Policy</string>
    <string name="email">Email</string>
    <string name="email_attachment">Email Attachment</string>
    <string name="email_header">EMAIL</string>
    <string name="empty_custom_symbols">Empty custom symbols</string>
    <string name="empty_file_name">Empty file name</string>
    <string name="empty_name">Empty name</string>
    <string name="empty_password">Empty password</string>
    <string name="empty_title">Empty title</string>
    <string name="enable_expiration_notifications">Enable expiration notifications</string>
    <string name="enable">Enable</string>
    <string name="enabled">Enabled</string>
    <string name="erase_all_expiration_notifications">Erase all password expiration notifications and tracked files</string>
    <string name="erase_all_saved_passwords">Erase all saved passwords and keys</string>
    <string name="expiration">Expiration</string>
    <string name="expiration_notifications">Expiration Notifications</string>
    <string name="expiration_notifications_warning">Enabling expiration notifications requires PasswdSafe to store expiration information for the file (record title, group, and expiration date).  This information is stored unencrypted on the device.  No passwords are stored.</string>
    <string name="expired_password_notification">Expired password notification</string>
    <string name="expiring_password">Expiring password</string>
    <string name="ext_storage_not_mounted">External storage not mounted.  Please mount the storage to view files.</string>
    <string name="file_backups">File backups</string>
    <string name="file_close_timeout">File close timeout</string>
    <string name="file_exists">File exists</string>
    <string name="file">File</string>
    <string name="file_name">File Name</string>
    <string name="file_not_found_perm_denied">File not found or permission denied</string>
    <string name="file_open_help">
        File passwords can be saved on devices with biometrics scanner and
        Android 6.0 or higher.  The passwords are encrypted using AES-256
        keys that are protected by a biometrics scan.
        \n
        - To save a password, first ensure a biometrics scan is registered
        with the device in the security settings.  Then, check the save option,
        enter the password, and click OK. After the password is verified,
        scan the biometric credential when prompted. The password will be
        encrypted and saved, and the file will open.
        \n
        - To use a saved password, scan the biometric credential instead of
        entering a password.  If the scan is successful, the password is
        decrypted and used to open the file.  If a YubiKey is used, the key
        will be read after the biometric credential is scanned.
        \n
        - To remove a saved password, uncheck the save option and open the file.
        The saved password will be erased from the device.  All saved
        passwords can be removed from the password preferences.
        \n
        \nTo use a YubiKey, follow these steps:\n
        - If using a NFC-enabled YubiKey (e.g. a NEO), enable NFC support in the
        device settings\n
        - Enter the user password to the file\n
        - Choose which slot on the YubiKey has the challenge-response key.
        Usually slot 2 is used for Password Safe.\n
        - Check the YubiKey option\n
        - Click OK\n
        - Within 30 seconds, activate the YubiKey\n
        - For NFC, press the YubiKey to the back of the phone or
        tablet.  There will be sounds as the key is being read.  If the device
        doesn\'t respond with a rising tone, try moving the key around.  A bit
        of trial-and-error is needed to find the correct location.  The button
        on the YubiKey itself does not need to be pressed.\n
        - For USB, insert the YubiKey and allow PasswdSafe access to the key.
        The key can be inserted at any time while opening the file.  If set in
        the configuration of the YubiKey, the button may need to be pressed
        after clicking OK.  The indicator on the button should blink if a press
        is required.\n
        - Once the key is found and activated, it will be used to authenticate
        with your password.  The file will open automatically.
    </string>
    <string name="file_operations">File Operations…</string>
    <string name="file_password_encoding">File password encoding</string>
    <string name="files">Files</string>
    <string name="find_similar">Find Similar</string>
    <string name="generate">Generate</string>
    <string name="generate_password">Generate Password</string>
    <string name="go">Go</string>
    <string name="go_to_shortcut">Goto</string>
    <string name="group">Group</string>
    <string name="group_cannot_start_with_dot">Group cannot start with a \'.\'</string>
    <string name="group_header">GROUP</string>
    <string name="group_records">Group records</string>
    <string name="hidden_password_alias">***** (from alias, tap to show)</string>
    <string name="hidden_password_normal">***** (tap to show)</string>
    <string name="hidden_password_shortcut">***** (from shortcut, tap to show)</string>
    <string name="hide_password">Hide Password</string>
    <string name="length">Length</string>
    <string name="name">Name</string>
    <string name="open_file_title">Open File</string>
    <string name="password">Password</string>
    <string name="press_yubikey">Press YubiKey</string>
    <string name="save_password">Save password</string>
    <string name="use_digits">Digits</string>
    <string name="use_lowercase">Lowercase</string>
    <string name="use_symbols">Symbols</string>
    <string name="use_uppercase">Uppercase</string>
    <string name="yubikey">YubiKey</string>
    <string name="yubikey_debugging">YubiKey Debugging</string>
    <string name="yubikey_error">Error communicating with the YubiKey: %1$s</string>
    <string name="yubikey_nfc_disabled">YubiKey NFC disabled. To enable, use the menu to open the NFC settings.</string>
</resources>